@@ -149,17 +149,19 @@ ui = fluidPage(
 
            fluidRow(
              HTML('<h4>Operations with selection: '),
+             actionButton(inputId = "selection_play", label = "Play", inline = TRUE),
+             shinyBS:::bsPopover(id='selection_play', title=NULL, content='Play selection', placement="right", trigger="hover"),
              actionButton(inputId = "selection_unvoice", label = "Unvoice", inline = TRUE),
              shinyBS:::bsPopover(id='selection_unvoice', title=NULL, content='Treat selection as unvoiced', placement="right", trigger="hover"),
-             actionButton(inputId = "selection_voice", label = "Undo unvoice", inline = TRUE),
+             actionButton(inputId = "selection_voice", label = "Undo\nunvoice", inline = TRUE),
              shinyBS:::bsPopover(id='selection_voice', title=NULL, content='Undo treating selection as unvoiced', placement="right", trigger="hover"),
-             actionButton(inputId = "selection_octaveUp", label = "Octave UP", inline = TRUE),
+             actionButton(inputId = "selection_octaveUp", label = "Octave\nUP", inline = TRUE),
              shinyBS:::bsPopover(id='selection_octaveUp', title=NULL, content='Raise pitch for selection by an octave', placement="right", trigger="hover"),
-             actionButton(inputId = "selection_octaveDown", label = "Octave DOWN", inline = TRUE),
+             actionButton(inputId = "selection_octaveDown", label = "Octave\nDOWN", inline = TRUE),
              shinyBS:::bsPopover(id='selection_octaveDown', title=NULL, content='Lower pitch for selection by an octave', placement="right", trigger="hover"),
              actionButton(inputId = "selection_setPrior", label = "Set prior", inline = TRUE),
              shinyBS:::bsPopover(id='selection_setPrior', title=NULL, content='Set a prior on expected pitch values corresponding to the selected frequency range', placement="right", trigger="hover"),
-             actionButton(inputId = "selection_zoomToSel", label = "Zoom to sel", inline = TRUE),
+             actionButton(inputId = "selection_zoomToSel", label = "Zoom\nto sel", inline = TRUE),
              shinyBS:::bsPopover(id='selection_zoomToSel', title=NULL, content='Zoom to selection (time axis only)', placement="right", trigger="hover"),
              HTML('</h4>')
            ),
